--- a/style.css
+++ b/style.css
@@ -1,3 +1,86 @@
+/*media query for mobile*/
+
+@media screen and (min-width: 750px) {
+  #container {
+    width: 50%;
+    height: 100%;
+  }
+
+  #about figure {
+    float: right;
+    width: 40%;
+    position: relative;
+  }
+
+  #about figure img {
+    width: 100%;
+  }
+
+  figcaption {
+	position: relative;
+	margin-top: 1%;
+	text-align: center;
+  }
+
+  #about, aside {
+	padding: 20px 0;
+	float: left;
+}
+
+  #about {
+    width: 60%;
+  }
+
+  aside {
+    width: 32%;
+    height: 800px;
+  }
+
+  aside figure img {
+    width: 45%;
+    margin: 0 auto;
+  }
+
+  aside h2 {
+    padding-bottom: 15px;
+  }
+}
+/*reset*/
+*, html {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/*---*/
+
+body {
+  line-height: 1rem;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/*----- custom css----- */
+
 @import url('../css/fonts.css');
 
 html, body{
@@ -60,7 +143,6 @@ button.btn{
   font-family: var(--Montserrat);
   cursor: pointer;
 }
-/* -x- global classes -x- */
 
 /*--navigation--*/
 .nav{
@@ -123,9 +205,9 @@ button.btn{
 
 /*---- site title ----*/
 main .site-title{
-  background: url('https://i.ibb.co/XxgWGhd/tcg-1.jpg');
+  background: url('https://i.ibb.co/KDQQmkd/IMG-5292.jpg');
   background-size: cover;
-  height: 45rem;
+  height: 50rem;
   justify-content: center;
 }
 
@@ -167,137 +249,102 @@ main .header h1{
   text-align: center;
   font-family: var(--PatuaOne);
 }
-/* ---- img gallery ---*/
-.flex-container{
-  display: flex;
-  flex-flow: row wrap;
+
+/* slideshow gallery from w3schools*/
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
   width: 100%;
-  flex-basis: 100%;
-}
-
-/*--hover image ---*/
-.hover-animation{
-  position: relative;
-  height: 400px;
-  width: 400px;
-  margin: 10% auto 0;
-  color: #fff;
-}
-
-.hover-animation img{
-  position: absolute;
-  left: 0;
-  width: 400px;
-  height: 400px;
-  transition: opacity .25s ease-in-out;
-}
-.hover-animation img.img-front1:hover{
-  opacity:0;
-  cursor: pointer;
-}
-/*--2--*/
-.hover-animation2{
-  position: relative;
-  height: 400px;
-  width: 400px;
-  margin: 10% auto 0;
-  color: #fff;
-}
-
-.hover-animation2 img{
-  position: absolute;
-  left: 0;
-  width: 400px;
-  height: 400px;
-  transition: opacity .25s ease-in-out;
-}
-.hover-animation2 img.img-front1:hover{
-  opacity:0;
-  cursor: pointer;
-}
-figure{
-  display: table;
-}
-figcaption{
-  display: table-caption;
-  caption-side: top;
   text-align: center;
-  font-family: var(--Montserrat);
-  color: var(--white);
-}
-/* 3 */
-.hover-animation3{
-  position: relative;
-  height: 400px;
-  width: 400px;
-  margin: 10% auto 0;
-  color: #fff;
 }
 
-.hover-animation3 img{
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
   position: absolute;
-  left: 0;
-  width: 400px;
-  height: 400px;
-  transition: opacity .25s ease-in-out;
+  top: 0;
 }
-.hover-animation3 img.img-front1:hover{
-  opacity:0;
+
+/* The dots/bullets/indicators */
+.dot {
   cursor: pointer;
-}
-figure{
-  display: table;
-}
-figcaption{
-  display: table-caption;
-  caption-side: top;
-  text-align: center;
-  font-family: var(--Montserrat);
-  color: var(--white);
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-/* contact */
-input[type=text], select, textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical;
-  font-family: var(--Montserrat);
-
+.active, .dot:hover {
+  background-color: #717171;
 }
 
-input[type=submit] {
-  background-color: var(--blood-red);
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-family: var(--Montserrat);
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
-input[type=submit]:hover {
-  background-color: black;
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 
-.container {
-  border-radius: 5px;
-  background-color: #262626;
-  padding: 50px;
-  font-family: var(--Montserrat);
-  color: white;
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
-
-body .p{
-  font-family: var(--Montserrat);
-  color: white;
-}
-/*--x--- main contents --x--*/
-
 /*--footer--*/
 
 .sticky-footer{
