--- a/style.css
+++ b/style.css
@@ -1,34 +1,46 @@
 /*media query for mobile*/
 
+
+
 @media screen and (min-width: 750px) {
   #container {
     width: 50%;
     height: 100%;
   }
 
-  #about figure {
-    float: right;
-    width: 40%;
-    position: relative;
+  #about figure{
+  /*float: left;*/
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  margin: 0.5em;
+  padding: 0.5em;
+  position: relative;
+}
+
+ 
+  #about .image-caption-text{
+  	margin-top: 10px;
+    margin-left: -30px;
   }
 
-  #about figure img {
-    width: 100%;
-  }
-
-  figcaption {
-	position: relative;
-	margin-top: 1%;
-	text-align: center;
+  figure figcaption{
+  	position: relative;
+  	color: rgb(91, 91, 91);
+  	float: center;
+  	font-style: italic;
+  	font-size: 1.125em;
+  	text-align: center;
+  	width: 300px;
   }
 
   #about, aside {
 	padding: 20px 0;
-	float: left;
 }
 
   #about {
-    width: 60%;
+    /* width: 60%; */
   }
 
   aside {
@@ -54,7 +66,6 @@
   font: inherit;
   vertical-align: baseline;
 }
-/*---*/
 
 body {
   line-height: 1rem;
@@ -79,15 +90,14 @@ table {
   border-spacing: 0;
 }
 
-/*----- custom css----- */
-
 @import url('../css/fonts.css');
 
 html, body{
-  margin: 0%;
   box-sizing: border-box;
+  /*margin: 0%;
   overflow-x: hidden;
   background-color: #262626;
+  */
 }
 
 :root{
@@ -127,7 +137,6 @@ ul{
 h1{
   font-family: var(--PatuaOne);
   font-size: 2.5rem;
-  color: var(--white);
 }
 
 h3{
@@ -144,8 +153,13 @@ button.btn{
   cursor: pointer;
 }
 
+
+.navIcon{
+  display: none;
+}
+
 /*--navigation--*/
-.nav{
+/* .nav{
   background: white;
   position: relative;
   z-index: 999;
@@ -153,10 +167,21 @@ button.btn{
   height: 0rem;
   min-height: 10vh;
   overflow: hidden;
+} */
+
+.about-content {
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+#about figure img{
+  width: 75%;
 }
 
 .nav .nav-menu{
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .nav .nav-items{
@@ -186,6 +211,10 @@ button.btn{
   font-family: var(--PatuaOne);
   font-size: 2.5rem;
   color: var(--black);
+}
+
+.nav-brand img {
+  width: 40%;
 }
 
 .nav .social{
@@ -250,22 +279,19 @@ main .header h1{
   font-family: var(--PatuaOne);
 }
 
-/* slideshow gallery from w3schools*/
+/* slideshow gallery from w3schools, wip*/
 * {box-sizing:border-box}
 
-/* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -281,18 +307,15 @@ main .header h1{
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -303,7 +326,6 @@ main .header h1{
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -312,7 +334,6 @@ main .header h1{
   top: 0;
 }
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -328,14 +349,13 @@ main .header h1{
   background-color: #717171;
 }
 
-/* Fading animation */
 .fade {
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
+/* animation
 @-webkit-keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
@@ -344,7 +364,8 @@ main .header h1{
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
-}
+} */
+
 /*--footer--*/
 
 .sticky-footer{
@@ -355,4 +376,46 @@ main .header h1{
   z-index: 99;
   color: #636363;
   text-align: center;
+}
+
+
+@media screen and (max-width: 480px) {
+  .element {
+    overflow: hidden;
+    /* position: relative; */
+  }
+  
+  .element #navLink {
+    display: none;
+  }
+  
+  .element li a {
+    display: block;
+  }
+  
+  .element a.navIcon {
+    right: 20px;
+    position: absolute;
+    display: block;
+    top: 25px;
+  }
+
+  .navIcon {
+    display: block !important;
+  }
+
+  .nav .nav-items {
+    display: none;
+  }
+
+  .nav-brand {
+    width: 10%;
+  }
+  .nav-brand a img {
+    width: 100%;
+  }
+
+  .about-content {
+    display: block;
+  }
 }
