--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
   position: relative;
 }
 
- 
+
   #about .image-caption-text{
   	margin-top: 10px;
     margin-left: -30px;
@@ -139,10 +139,25 @@ h1{
   font-size: 2.5rem;
 }
 
+h2{
+  text-align: center;
+  text-decoration: underline;
+  padding-bottom: 5rem;
+  font-family: var(--Montserrat);
+  font-size: 2.1rem;
+  color: var(--black);
+}
 h3{
   font-family: var(--Montserrat);
   font-size: 1.1rem;
   color: var(--white);
+}
+
+h4{
+  text-align: center;
+  font-family: var(--Montserrat);
+  font-size: 1.5rem;
+  color: var(--black);
 }
 button.btn{
   border: none;
@@ -173,6 +188,8 @@ button.btn{
   display: flex;
   max-width: 1200px;
   margin: 0 auto;
+  font-family: var(--Montserrat);
+  font-size: 1.1rem;
 }
 
 #about figure img{
@@ -384,15 +401,15 @@ main .header h1{
     overflow: hidden;
     /* position: relative; */
   }
-  
+
   .element #navLink {
     display: none;
   }
-  
+
   .element li a {
     display: block;
   }
-  
+
   .element a.navIcon {
     right: 20px;
     position: absolute;
