--- a/style.css
+++ b/style.css
@@ -129,13 +129,17 @@ ul{
 }
 
 h1{
-  font-family: var(--PatuaOne);
+  display: flex;
+  width: 20%
+  height: 50rem;
+  /*font-family: var(--PatuaOne);*/
   font-size: 2.5rem;
 }
 
 h2{
   text-align: center;
   text-decoration: underline;
+  padding-top: 10%;
   padding-bottom: 5rem;
   font-family: var(--Montserrat);
   font-size: 2.1rem;
@@ -307,11 +311,10 @@ main .header h1{
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
   width: auto;
-  margin-top: -22px;
+  margin-top: 50%;
   padding: 16px;
-  color: white;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -351,6 +354,7 @@ main .header h1{
   height: 15px;
   width: 15px;
   margin: 0 2px;
+  margin-top: 60%;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -418,3 +422,37 @@ main .header h1{
     display: block;
   }
 }
+
+/* contact */
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; 
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+
+/* submit button */
+input[type=submit] {
+  background-color: #383773;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #ffffff;
+    color: Black;
+}
+
+/*  background color padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20%;
