--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/*reset*/
+*, html {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
 /*media query for mobile*/
 
 @media screen and (min-width: 750px) {
@@ -33,37 +42,35 @@
   	width: 300px;
   }
 
+  figure .img{
+    display: flex;
+    margin: auto;
+    padding-top: 20%;
+    justify-content: center;
+  }
+
   #about, aside {
 	padding: 20px 0;
 }
 
   #about {
+    background: var(--cloud);
 
   }
 
   aside {
-    width: 32%;
-    height: 800px;
+    width: 30%;
+    height: 40%;
   }
 
   aside figure img {
-    width: 45%;
-    margin: 0 auto;
+    width: 100%;
+    margin: auto;
   }
 
   aside h2 {
     padding-bottom: 15px;
   }
-}
-
-/*reset*/
-*, html {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
 }
 
 body {
@@ -118,7 +125,7 @@ html, body{
 --cloud: linear-gradient(to top, #1c92d2, #f2fcfe);
 }
 
-/* -- styles -- */
+/* --------------------------- styles ---------------- */
 a{
   text-decoration: none;
   color: var(--text-gray);
@@ -137,8 +144,9 @@ h1{
   display: flex;
   width: 20%
   height: 50rem;
-  /*font-family: var(--PatuaOne);*/
+  font-family: var(--PatuaOne);
   font-size: 2.5rem;
+  text-shadow: 1px 1px white;
 }
 
 h2{
@@ -151,11 +159,12 @@ h2{
   font-family: var(--Montserrat);
   font-size: 2.1rem;
   color: var(--black);
+  text-shadow: 2px 2px white;
 }
 
 h3{
   display: flex;
-  text-align: center;
+  text-align: justify;
   text-decoration: italic;
   padding-top: 5%
   font-family: var(--Montserrat);
@@ -168,6 +177,18 @@ h4{
   font-family: var(--Montserrat);
   font-size: 1.5rem;
   color: var(--black);
+}
+
+p{
+  display: block;
+  text-align: justify;
+  padding-top: 5%;
+  padding-left: 10%;
+  padding-bottom: 5rem;
+  font-family: var(--Montserrat);
+  font-size: 1rem;
+  color: var(--black);
+
 }
 button.btn{
   border: none;
@@ -182,17 +203,6 @@ button.btn{
 .navIcon{
   display: none;
 }
-
-/*--navigation--*/
-/* .nav{
-  background: white;
-  position: relative;
-  z-index: 999;
-  padding: 0 2rem;
-  height: 0rem;
-  min-height: 10vh;
-  overflow: hidden;
-} */
 
 .about-content {
   display: flex;
@@ -260,9 +270,10 @@ button.btn{
   color: #e0001e;
 }
 
-/*---- site title ----*/
+/*---- ----------------site title --------------------*/
 main .site-title{
-  background: var(--cloud);
+  background-image: url(https://i.ibb.co/1rG3mhw/site-bg-flower.jpg);
+  background-position: center;
   background-size: cover;
   height: 50rem;
   justify-content: center;
@@ -284,7 +295,7 @@ main .site-title h1, h3{
   /*text-shadow: 2px 2px #000000;*/
 }
 
-/* button */
+/* ---------------------button------------------- */
 
 main .site-title .btn{
   margin: auto;
@@ -311,52 +322,56 @@ main .header h1{
   font-family: var(--PatuaOne);
 }
 
-/* slideshow gallery from w3schools, wip*/
-* {box-sizing:border-box}
-
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+/*------------------ slideshow gallery from w3schools, wip----------*/
+* {
+  box-sizing: border-box;
 }
 
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
+}
+
+/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
-.prev, .next {
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
   cursor: pointer;
-  position: absolute;
-  width: auto;
-  margin-top: 50%;
-  padding: 16px;
-  color: black;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
 }
 
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
+/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -365,20 +380,34 @@ main .header h1{
   top: 0;
 }
 
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  margin-top: 60%;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 16.66%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
 }
 
 .fade {
@@ -397,7 +426,7 @@ main .header h1{
   color: #636363;
   text-align: center;
 }
-/*---*/
+/*---------------------------------------------------------------*/
 
 @media screen and (max-width: 480px) {
   .element {
@@ -440,8 +469,8 @@ main .header h1{
   }
 }
 
-/* contact */
-/* Style inputs with type="text", select elements and textareas */
+/* ------------------------- contact--------------------  */
+
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
@@ -477,11 +506,24 @@ input[type=submit]:hover {
 	margin: 0 auto;
 }
 
-/*services cards*/
+/*------------------services cards------------------------------*/
 
 /@import "compass";
 @import "breakpoint";*/
 
+.services {
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin-top: 15px;
+	padding: 1.5%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
 .cards {
 	display: -webkit-flex;
 	display: flex;
@@ -588,10 +630,9 @@ input[type=submit]:hover {
 }
 
 img {
-	max-width: 100%; // stop images from breaking out of their bounding boxes.
+	max-width: 100%;
 }
 
-//General styles for page to make it prettier ;P
 body {
 	background :#f0f0f0;
 	font-size: 17px;
