--- a/style.css
+++ b/style.css
@@ -96,8 +96,6 @@ table {
   border-spacing: 0;
 }
 
-@import "compass";
-@import "breakpoint";
 @import url('../css/fonts.css');
 
 html, body{
@@ -106,6 +104,8 @@ html, body{
 
 :root{
 /* -- font families -- */
+
+/* add david rudnick*/
 
 --PatuaOne: 'PatuaOne', serif;
 --Montserrat: 'Montserrat', serif;
@@ -156,7 +156,7 @@ h2{
   padding-top: 10%;
   padding-left: 20%;
   padding-bottom: 5rem;
-  font-family: var(--Montserrat);
+  font-family: Georgia;
   font-size: 2.1rem;
   color: var(--black);
   text-shadow: 2px 2px white;
@@ -166,26 +166,29 @@ h3{
   display: flex;
   text-align: justify;
   text-decoration: italic;
-  padding-top: 5%
-  font-family: var(--Montserrat);
+  padding-top: 5%;
+  font-family: Garamond;
   font-size: 1.5rem;
   color: black;
 }
 
 h4{
   text-align: center;
-  font-family: var(--Montserrat);
+  text-decoration: underline;
+  font-family: Garamond;
   font-size: 1.5rem;
   color: var(--black);
 }
 
 p{
   display: block;
-  text-align: justify;
+  line-height: 1.5rem;
+  text-align: left;
   padding-top: 5%;
   padding-left: 10%;
+  padding-right: 10%;
   padding-bottom: 5rem;
-  font-family: var(--Montserrat);
+  font-family: Trebuchet MS;
   font-size: 1rem;
   color: var(--black);
 
@@ -361,7 +364,7 @@ main .header h1{
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
+  left: 75%;
   border-radius: 3px 0 0 3px;
 }
 
@@ -385,6 +388,10 @@ main .header h1{
   text-align: center;
   background-color: #222;
   padding: 2px 16px;
+  color: white;
+}
+
+.caption-container p {
   color: white;
 }
 
@@ -506,150 +513,284 @@ input[type=submit]:hover {
 	margin: 0 auto;
 }
 
-/*------------------services cards------------------------------*/
-
-/@import "compass";
-@import "breakpoint";*/
-
-.services {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	margin-top: 15px;
-	padding: 1.5%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+.g-container {
+  max-width: inherit;
 }
-.cards {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-flex-wrap: wrap;
-	flex-wrap: wrap;
-	margin-top: 15px;
-	padding: 1.5%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+/*---------lightbox----------*/
+html {
+  box-sizing: border-box;
 }
 
-.card {
-	@media (max-width: 700px) {
-		width: 100%;
-	}
-	position: relative;
-	margin-bottom: 20px;
-	padding-bottom: 30px;
-	background: #fefff9;
-	color: #363636;
-	text-decoration: none;
-	@include box-shadow(rgba(black, 0.19) 0 0 8px 0);
-	@include border-radius(4px);
-	@include breakpoint(700px, $no-query: true) {
-	//switch to 2 columns
-		max-width: 320px;
-		margin-right: 20px;
-		margin-bottom: 20px;
-		&:nth-child(even) {
-			margin-right: 0;
-		}
-	}
-	@include breakpoint(980px, $no-query: true) {
-	//switch to 3 columns
-		&:nth-child(even) {
-			margin-right: 20px;
-		}
-		&:nth-child(3n) {
-			margin-right: 0;
-		}
-	}
-	span {
-		display: block;
-	}
-	.card-summary {
-		padding: 5% 5% 3% 5%;
-	}
-	.card-header {
-		position: relative;
-		height: 175px;
-		overflow: hidden;
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: center;
-		background-color: rgba(white,.15);
- 		background-blend-mode: overlay;
-		@include border-radius(4px 4px 0 0);
-		&:hover, &:focus {
-			background-color: rgba(white, 0);
-		}
-	}
-	.card-title {
-		background: rgba(157, 187, 63, .85);
-		padding: 3.5% 0 2.5% 0;
-		color: white;
-		font-family: 'Roboto Condensed', sans-serif;
-		text-transform: uppercase;
-		position: absolute;
-		bottom: 0;
-		width: 100%;
-		h3 {
-			font-size: 1.2em;
-			line-height: 1.2;
-			padding: 0 3.5%;
-			margin: 0;
-		}
-	}
-	.card-meta {
-		max-height: 0;
-		overflow: hidden;
-		color: #666;
-		font-size: .78em;
-		text-transform: uppercase;
-		position: absolute;
-		bottom: 5%;
-		padding: 0 5%;
-		@include transition-property(max-height);
-		@include transition-duration(.4s);
-		@include transition-timing-function(ease-in-out);
-	}
-	&:hover, &:focus {
-		background: white;
-	  @include box-shadow(rgba(black, 0.45) 0px 0px 20px 0px);
-		.card-title {
-			background: rgba(157, 187, 63, .95);
-		}
-		.card-meta {
-			max-height: 1em;
-		}
-	}
-}
-
-img {
-	max-width: 100%;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
-	background :#f0f0f0;
-	font-size: 17px;
-	line-height: 1.4;
-	font-family: 'Jaldi', sans-serif;
+  margin: 0;
 }
 
-* {
-  @include transition-property(
-    background-color,
-    border-color,
-    box-shadow,
-    color,
-    opacity,
-    text-shadow,
-    transform
-  );
-  @include transition-duration(0.2s);
-  @include transition-timing-function(linear);
+.preview {
+	width: 100%;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.row > .col {
+  padding: 0 8px;
+}
+
+.col {
+  float: left;
+  width: 25%;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding: 10px 62px 0px 62px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+.modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  padding: 0 0 0 0;
+  width: 80%;
+  max-width: 1200px;
+}
+
+.slide {
+  display: none;
+
+}
+
+.image-slide {
+	width: 100%;
+}
+
+.modal-preview {
+	width: 100%;
+}
+
+.dots {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+img.preview, img.modal-preview {
+  opacity: 0.6;
+}
+
+img.active,
+.preview:hover,
+.modal-preview:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.previous,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.previous:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/*------------------services cards------------------------------*/
+.card {
+background-color: #9fc3c6;
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+transition: 0.3s;
+width: 100%;
+padding-left: 10%;
+padding-right: 10%;
+padding-bottom: 20%;
+padding-top: 20%;
+}
+
+/* On mouse-over*/
+.card:hover {
+box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.c-container {
+padding: 2px 2px;
+}
+/*-----------------lightbox----------*/
+.lightbox {
+    height: 200px;
+    width: 200px;
+    float: left;
+    margin: 10px;
+}
+
+.img-popup {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(38, 40, 52, 0.9);
+    text-align: center;
+    display: none;
+    z-index: 9999999999999;
+    animation: pop-in;
+    animation-duration: 0.5s;
+    -webkit-animation: pop-in 0.5s;
+    -moz-animation: pop-in 0.5s;
+    -ms-animation: pop-in 0.5s;
+
+}
+
+.img-popup img {
+    position: absolute;
+    top: 50%;
+    max-width: 80%;
+    max-height: 80vh;
+    display: inline-block;
+    transform: translate(-50%, -50%);
+}
+
+.close-lightbox {
+    position: absolute;
+    top: 45px;
+    right: 20%;
+    padding: 0px 10px;
+    color: #fff;
+    font-size: 35px;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    z-index: 99;
+    cursor: pointer;
+}
+.lightboxfadeout{
+    animation: fadeout;
+    animation-duration: 0.5s;
+    -webkit-animation: fadeout 0.5s;
+    -moz-animation: fadeout 0.5s;
+    -ms-animation: fadeout 0.5s;
+}
+
+@keyframes pop-in {
+    0% {
+        opacity: 0;
+        transform: scale(0.1);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@-webkit-keyframes pop-in {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale(0.1);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+    }
+}
+
+@-moz-keyframes pop-in {
+    0% {
+        opacity: 0;
+        -moz-transform: scale(0.1);
+    }
+    100% {
+        opacity: 1;
+        -moz-transform: scale(1);
+    }
+}
+
+
+@keyframes fadeout {
+    100% {
+        opacity: 0;
+        transform: scale(0.1);
+    }
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@-webkit-keyframes fadeout {
+    100% {
+        opacity: 0;
+        -webkit-transform: scale(0.1);
+    }
+    0% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+    }
+}
+
+@-moz-keyframes fadeout {
+    100% {
+        opacity: 0;
+        -moz-transform: scale(0.1);
+    }
+    0% {
+        opacity: 1;
+        -moz-transform: scale(1);
+    }
 }
