--- a/style.css
+++ b/style.css
@@ -142,8 +142,8 @@ ul{
 
 h1{
   display: flex;
-  width: 20%
-  height: 50rem;
+  width: 20%;
+  /* height: 50rem; */
   font-family: var(--PatuaOne);
   font-size: 2.5rem;
   text-shadow: 1px 1px white;
@@ -279,6 +279,7 @@ main .site-title{
   background-position: center;
   background-size: cover;
   height: 50rem;
+  line-height: 2.5ch;
   justify-content: center;
 }
 
